# testcontainer-magento-data-rust

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  release-please-config.json
.github/workflows/: release-please.yml  release-plz.yml  rust-package.yml
src/: lib.rs  runners.rs
src/core/: mod.rs
src/core/image/: builder.rs  mod.rs  name.rs  repository.rs  tag.rs
src/images/: db.rs  mod.rs  opensearch.rs
tests/: mariadb.rs  mysql.rs  opensearch.rs
