[package]
name = "testcontainers-magento-data"
description = ""
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ecomdev/testcontainer-magento-data-rust"
rust-version = "1.81"

[dependencies]
testcontainers = { version = "0.23" }
tokio = { version = "1", features = ["macros", "io-util"] }
env-file-reader = { version = "0.3.0" }

[features]
blocking = ["testcontainers/blocking"]
watchdog = ["testcontainers/watchdog"]

[dev-dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-native-roots", "mysql" ] }
